fix: spacing between components

--- a/src/app/components/experience/experience.scss
+++ b/src/app/components/experience/experience.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  gap: 24px;
+
   grid-area: experience;
 
   p {
